Fix spacing for widgets

--- a/css/checkout-layout-rtl-202-beta-2.css
+++ b/css/checkout-layout-rtl-202-beta-2.css
@@ -188,9 +188,18 @@ body.woocommerce-checkout .fc-content > div.woocommerce {
   margin: 0;
 }
 
+.fc-widget-area .widget:first-child,
+.fc-widget-area p:first-child {
+  margin-top: 0;
+  -webkit-margin-before: 0;
+  margin-block-start: 0;
+}
+
 .fc-widget-area .widget:last-child,
 .fc-widget-area p:last-child {
   margin-bottom: 0;
+  -webkit-margin-after: 0;
+  margin-block-end: 0;
 }
 
 .fc-checkout-header .fc-checkout__header-widgets {
