--- a/sass/partials/_checkout-widget-areas.scss
+++ b/sass/partials/_checkout-widget-areas.scss
@@ -8,7 +8,14 @@
 
 
 
+.fc-widget-area .widget:first-child,
+.fc-widget-area p:first-child {
+	margin-top: 0;
+	margin-block-start: 0;
+}
+
 .fc-widget-area .widget:last-child,
 .fc-widget-area p:last-child {
 	margin-bottom: 0;
+	margin-block-end: 0;
 }
